--- a/rmd/references.bib
+++ b/rmd/references.bib
@@ -4535,3 +4535,12 @@ PMCID: PMC3783046}
 	url = {http://dx.doi.org/10.1262/jrd.2016-093},
 	langid = {en}
 }
+
+@article{lorenapantanoautcregeorgiaescaramisautchristosargyropoulosaut2017,
+	title = {isomiRs},
+	author = {{Lorena Pantano [Aut, Cre], Georgia Escaramis [Aut], ChristosArgyropoulos [Aut]}},
+	year = {2017},
+	date = {2017},
+	doi = {10.18129/B9.BIOC.ISOMIRS},
+	url = {https://bioconductor.org/packages/isomiRs}
+}
