--- a/rmd/references.bib
+++ b/rmd/references.bib
@@ -4544,3 +4544,78 @@ PMCID: PMC3783046}
 	doi = {10.18129/B9.BIOC.ISOMIRS},
 	url = {https://bioconductor.org/packages/isomiRs}
 }
+
+@article{xu2018,
+	title = {Epigenome in Early Mammalian Development: Inheritance, Reprogramming and Establishment},
+	author = {{Xu}, {Qianhua} and {Xie}, {Wei}},
+	year = {2018},
+	month = {03},
+	date = {2018-03},
+	journal = {Trends in Cell Biology},
+	pages = {237--253},
+	volume = {28},
+	number = {3},
+	doi = {10.1016/j.tcb.2017.10.008},
+	url = {http://dx.doi.org/10.1016/j.tcb.2017.10.008},
+	langid = {en}
+}
+
+@article{hajkova2008,
+	title = {Chromatin dynamics during epigenetic reprogramming in the mouse germ line},
+	author = {{Hajkova}, {Petra} and {Ancelin}, {Katia} and {Waldmann}, {Tanja} and {Lacoste}, {Nicolas} and {Lange}, {Ulrike C.} and {Cesari}, {Francesca} and {Lee}, {Caroline} and {Almouzni}, {Genevieve} and {Schneider}, {Robert} and {Surani}, {M. Azim}},
+	year = {2008},
+	month = {03},
+	date = {2008-03-19},
+	journal = {Nature},
+	pages = {877--881},
+	volume = {452},
+	number = {7189},
+	doi = {10.1038/nature06714},
+	url = {http://dx.doi.org/10.1038/nature06714},
+	langid = {en}
+}
+
+@article{seki2005,
+	title = {Extensive and orderly reprogramming of genome-wide chromatin modifications associated with specification and early development of germ cells in mice},
+	author = {{Seki}, {Yoshiyuki} and {Hayashi}, {Katsuhiko} and {Itoh}, {Kunihiko} and {Mizugaki}, {Michinao} and {Saitou}, {Mitinori} and {Matsui}, {Yasuhisa}},
+	year = {2005},
+	month = {02},
+	date = {2005-02},
+	journal = {Developmental Biology},
+	pages = {440--458},
+	volume = {278},
+	number = {2},
+	doi = {10.1016/j.ydbio.2004.11.025},
+	url = {http://dx.doi.org/10.1016/j.ydbio.2004.11.025},
+	langid = {en}
+}
+
+@article{conine2021,
+	title = {Soma-to-germline RNA communication},
+	author = {{Conine}, {Colin C.} and {Rando}, {Oliver J.}},
+	year = {2021},
+	month = {09},
+	date = {2021-09-20},
+	journal = {Nature Reviews Genetics},
+	pages = {73--88},
+	volume = {23},
+	number = {2},
+	doi = {10.1038/s41576-021-00412-1},
+	url = {http://dx.doi.org/10.1038/s41576-021-00412-1},
+	langid = {en}
+}
+
+@article{chen2013,
+	title = {Navigating the site for embryo implantation: Biomechanical and molecular regulation of intrauterine embryo distribution},
+	author = {{Chen}, {Qi} and {Zhang}, {Ying} and {Elad}, {David} and {Jaffa}, {Ariel J.} and {Cao}, {Yujing} and {Ye}, {Xiaoqin} and {Duan}, {Enkui}},
+	year = {2013},
+	month = {10},
+	date = {2013-10},
+	journal = {Molecular Aspects of Medicine},
+	pages = {1024--1042},
+	volume = {34},
+	number = {5},
+	doi = {10.1016/j.mam.2012.07.017},
+	url = {http://dx.doi.org/10.1016/j.mam.2012.07.017},
+	langid = {en}
+}
